--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@changesets/cli": "^2.27.9",
+    "@changesets/cli": "^2.27.10",
     "@formkit/tempo": "^0.1.2",
     "@hookform/resolvers": "^3.9.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
@@ -18,52 +18,54 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@uidotdev/usehooks": "^2.4.1",
-    "class-variance-authority": "^0.7.0",
+    "@unpic/placeholder": "^0.1.2",
+    "@unpic/react": "^0.1.14",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "embla-carousel": "^8.3.1",
-    "embla-carousel-autoplay": "^8.3.1",
-    "embla-carousel-react": "^8.3.1",
-    "keyv": "5.1.2",
+    "embla-carousel": "^8.5.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
+    "keyv": "5.2.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "lucide-react": "^0.454.0",
-    "next": "15.0.3-canary.4",
-    "next-themes": "^0.3.0",
-    "pocketbase": "^0.21.5",
+    "lucide-react": "^0.462.0",
+    "next": "15.0.4-canary.30",
+    "next-themes": "^0.4.3",
+    "pocketbase": "^0.22.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-hook-form": "^7.53.1",
+    "react-hook-form": "^7.53.2",
     "react-leaflet": "5.0.0-rc.1",
-    "resend": "4.0.1-alpha.0",
+    "resend": "4.0.1",
     "rimraf": "^6.0.1",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.4",
-    "tailwind-variants": "^0.2.1",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
-    "zod-pocketbase": "^0.3.7"
+    "zod-pocketbase": "^0.3.8"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.266",
+    "@iconify/json": "^2.2.276",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/leaflet": "^1.9.14",
     "@types/mailchimp__mailchimp_marketing": "^3.0.20",
     "@types/md5": "^2.3.5",
-    "@types/node": "^22.8.6",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.2",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "jiti": "^2.4.0",
     "md5": "^2.3.0",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "unplugin-icons": "^0.20.0"
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
+    "unplugin-icons": "^0.20.2"
   }
 }
