--- a/package.json
+++ b/package.json
@@ -9,63 +9,63 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@changesets/cli": "^2.27.10",
+    "@changesets/cli": "^2.27.11",
     "@formkit/tempo": "^0.1.2",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@unpic/placeholder": "^0.1.2",
-    "@unpic/react": "^0.1.14",
+    "@unpic/react": "^0.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "embla-carousel": "^8.5.1",
-    "embla-carousel-autoplay": "^8.5.1",
-    "embla-carousel-react": "^8.5.1",
-    "keyv": "5.2.1",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
+    "keyv": "5.2.3",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "lucide-react": "^0.462.0",
-    "next": "15.0.4-canary.30",
-    "next-themes": "^0.4.3",
-    "pocketbase": "^0.22.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-hook-form": "^7.53.2",
-    "react-leaflet": "5.0.0-rc.1",
-    "resend": "4.0.1",
+    "lucide-react": "^0.471.1",
+    "next": "15.2.0-canary.11",
+    "next-themes": "^0.4.4",
+    "pocketbase": "<0.22.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-leaflet": "5.0.0",
+    "resend": "4.1.1",
     "rimraf": "^6.0.1",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
+    "sonner": "^1.7.2",
+    "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zod-pocketbase": "^0.3.8"
+    "zod": "^3.24.1",
+    "zod-pocketbase": "^0.5.0"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.276",
+    "@iconify/json": "^2.2.295",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/leaflet": "^1.9.14",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.20",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/leaflet": "^1.9.16",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.21",
     "@types/md5": "^2.3.5",
-    "@types/node": "^22.10.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^9.15.0",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "jiti": "^2.4.0",
+    "@types/node": "^22.10.6",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "^10.0.1",
+    "jiti": "^2.4.2",
     "md5": "^2.3.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2",
-    "unplugin-icons": "^0.20.2"
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "unplugin-icons": "^22.0.0"
   }
 }
